--- a/oversight/views/view_oversight_probe.xml
+++ b/oversight/views/view_oversight_probe.xml
@@ -9,9 +9,10 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
     <record id="view_oversight_probe_tree" model="ir.ui.view">
         <field name="model">oversight.probe</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree colors="blue:(state == 'draft')">
                 <field name="name"/>
                 <field name="probe_type"/>
+                <field name="state" invisible="1"/>
             </tree>
         </field>
     </record>
@@ -22,6 +23,9 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
             <form>
                 <header>
                     <button name="button_execute" string="Execute" type="object" groups="oversight.group_oversight_manager"/>
+                    <button name="button_confirm" states="draft" string="Confirm" type="object" groups="oversight.group_oversight_manager"/>
+                    <button name="button_draft" states="confirm" string="Set to Draft" type="object" groups="oversight.group_oversight_manager"/>
+                    <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
                     <h1>
@@ -32,12 +36,18 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
                             <field name="name"/>
                             <field name="probe_type"/>
                         </group>
-                        <group string="Settings">
+                        <group string="Probe Settings">
                             <field name="target"/>
                         </group>
                     </group>
                     <notebook colspan="4">
-                        <page string="TODO">
+                        <page string="Cron Settings">
+                        <group>
+                            <field name="cron_id"/>
+                            <field name="interval_number"/>
+                            <field name="interval_type"/>
+
+                        </group>
                         </page>
                     </notebook>
                 </sheet>
