--- a/oversight/views/menu.xml
+++ b/oversight/views/menu.xml
@@ -6,7 +6,6 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
 -->
 <openerp><data>
 
-
     <menuitem id="menu_oversight_root"
         name="Oversight"
         sequence="20"/>
@@ -31,9 +30,14 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
         parent="menu_oversight_setting"
         sequence="20"/>
 
+    <menuitem id="menu_oversight_setting_third_service_variant"
+        name="Third Service Probes"
+        parent="menu_oversight_setting"
+        sequence="30"/>
+
     <menuitem id="menu_oversight_setting_virtual_variant"
         name="Virtual Probes"
         parent="menu_oversight_setting"
-        sequence="30"/>
+        sequence="40"/>
 
 </data></openerp>
