--- a/oversight/views/view_oversight_check.xml
+++ b/oversight/views/view_oversight_check.xml
@@ -65,7 +65,7 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
             <field name="name">Checks</field>
             <field name="res_model">oversight.check</field>
             <field name="view_type">form</field>
-            <field name="view_mode">graph,tree,form</field>
+            <field name="view_mode">tree,form,graph</field>
             <field name="context">{'search_default_probe_template_id': active_id}</field>
         </record>
 
