--- a/oversight/views/view_oversight_probe_template.xml
+++ b/oversight/views/view_oversight_probe_template.xml
@@ -198,18 +198,6 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
         </field>
     </record>
 
-<!--                                <div style="height:40px; width:200px; border-bottom:1px solid #999999;"-->
-<!--                                        t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)}">-->
-<!--                                    <div style="width:200px; text-align:center;">-->
-<!--                                        <a type="open">-->
-<!--                                            <field name="name"/>-->
-<!--                                        </a>-->
-<!--                                    </div>-->
-<!--                                    <div style="width:200px; text-align:center; font-style:italic;color:gray;">-->
-<!--                                        (<field name="has_image" />)-->
-<!--                                    </div>-->
-<!--                                </div>-->
-
     <record id="view_oversight_probe_template_tree_only" model="ir.ui.view">
         <field name="model">oversight.probe.template</field>
         <field name="mode">primary</field>
@@ -255,14 +243,28 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
         </field>
     </record>
 
-
-
     <record id="action_oversight_probe_template" model="ir.actions.act_window">
         <field name="name">Probes</field>
         <field name="res_model">oversight.probe.template</field>
         <field name="view_type">form</field>
         <field name="view_mode">kanban,tree,form</field>
-        <field name="context">{"search_default_filter_not_ok":1}</field>
+        <field name="context">{'active_test': False, 'search_default_filter_not_ok':1}</field>
+    </record>
+
+    <record id="action_execute_probe_template" model="ir.actions.server">
+        <field name="name">Execute</field>
+        <field name="type">ir.actions.server</field>
+        <field name="state">code</field>
+        <field name="model_id" ref="oversight.model_oversight_probe_template" />
+        <field name="code">self.button_execute_template(cr, uid, context.get('active_ids', []), context)</field>
+    </record>
+
+    <record id="value_execute_probe_template" model="ir.values">
+        <field name="name">Execute</field>
+        <field name="key">action</field>
+        <field name="key2">client_action_multi</field>
+        <field name="model">oversight.probe.template</field>
+        <field name="value" eval="'ir.actions.server,%d' % ref('action_execute_probe_template')" />
     </record>
 
     <menuitem id="menu_oversight_probe_template"
